# complior

./: .dockerignore  .env.example  .env.stripe.example  .eslintrc.json  .gitignore  .lintstagedrc.js  .prettierrc  AGENTS-Settings.md  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.production  E2E-REPORT-2026-03-30.md  LICENSE  README.md  SECURITY.md  THIRD-PARTY-LICENSES  deny.toml  docker-compose.production.yml  docker-compose.yml  package-lock.json  package.json  renovate.json  tsconfig.json  vitest.config.ts
.github/: CODEOWNERS  (+1 more)
cli/: Cargo.toml  build.rs
cli/data/: themes.json
cli/src/: animation.rs  chat_stream.rs  cli.rs  config.rs  contract_test.rs  daemon.rs  engine_client.rs  engine_process.rs  error.rs  input.rs  layout.rs  llm_settings.rs  main.rs  saas_client.rs  session.rs  theme.rs  theme_picker.rs  watcher.rs
cli/src/app/: actions.rs  commands.rs  executor.rs  mod.rs  overlays.rs  scan.rs  tests.rs  view_keys.rs
cli/src/components/: command_palette.rs  confirm_dialog.rs  file_picker.rs  mod.rs  quick_actions.rs  spinner.rs  suggestions.rs  toast.rs  undo_history.rs  whatif.rs  zoom.rs
cli/src/headless/: agent.rs  audit.rs  cert.rs  chat.rs  commands.rs  common.rs  cost.rs  daemon.rs  debt.rs  doc.rs  eval.rs  fix.rs  format.rs  import.rs  interactive.rs  jurisdiction.rs  login.rs  mod.rs  onboarding.rs  passport.rs  proxy.rs  redteam.rs  scan.rs  simulate.rs  status.rs  supply_chain.rs  sync.rs  tests.rs  tools.rs
cli/src/headless/format/: colors.rs  human.rs  labels.rs  layers.rs  mod.rs  report.rs
cli/src/types/: activity.rs  chat.rs  engine.rs  mod.rs  navigation.rs  sync.rs  ui.rs
cli/src/views/: chat.rs  code_viewer.rs  file_browser.rs  mod.rs  sidebar.rs  timeline.rs
cli/src/views/dashboard/: content.rs  footer.rs  mod.rs  overlays.rs  panels.rs  tests_agents.rs  tests_e2e_panels.rs  tests_e2e_views.rs  tests_footer.rs  tests_helpers.rs  tests_input.rs  tests_overlay.rs  tests_rendering.rs  tests_score.rs  tests_state.rs  tests_status_bar.rs  tests_watch.rs  tests_widgets.rs  utils.rs
cli/src/views/dashboard/snapshots/: complior__views__dashboard__tests_rendering__snapshot_dashboard_default.snap
cli/src/views/fix/: apply.rs  diff_preview.rs  mod.rs  render.rs  tests.rs
cli/src/views/obligations/: mod.rs  render.rs  tests.rs
cli/src/views/onboarding/: mod.rs  render.rs  steps.rs  tests.rs
cli/src/views/passport/: audit.rs  mod.rs  registry.rs  tests.rs
cli/src/views/report/: generators.rs  mod.rs  tests.rs
cli/src/views/scan/: detail.rs  explain.rs  mod.rs  preview.rs  progress.rs  render.rs  shared.rs  tests.rs
cli/src/views/scan/snapshots/: complior__views__scan__tests__tests__snapshot_scan_detail_open.snap  complior__views__scan__tests__tests__snapshot_scan_no_results.snap  complior__views__scan__tests__tests__snapshot_scan_split_layout.snap
cli/src/views/snapshots/: complior__views__chat__tests__snapshot_chat_with_messages.snap  complior__views__fix__tests__snapshot_fix_diff_preview.snap  complior__views__scan__tests__snapshot_scan_detail_open.snap  complior__views__sidebar__tests__snapshot_sidebar_default.snap
tui/: Cargo.toml
tui/src/: animation.rs  app.rs  cli.rs  config.rs  contract_test.rs  credentials.rs  engine_client.rs  engine_process.rs  error.rs  headless.rs  input.rs  layout.rs  main.rs  obligations.rs  providers.rs  session.rs  theme.rs  theme_picker.rs  types.rs  watcher.rs
tui/src/acp/: client.rs  gate.rs  mod.rs  session.rs  types.rs
tui/src/agents/: claude_code.rs  codex.rs  mod.rs  registry.rs
tui/src/app/: commands.rs  executor.rs  mod.rs  overlays.rs  scan.rs  sse.rs  tests.rs  view_keys.rs
tui/src/components/: command_palette.rs  confirm_dialog.rs  diff_overlay.rs  file_picker.rs  input_box.rs  markdown.rs  mod.rs  model_selector.rs  provider_setup.rs  quick_actions.rs  spinner.rs  suggestions.rs  toast.rs  undo_history.rs  whatif.rs  zoom.rs
tui/src/connection/: direct.rs  http.rs  mod.rs
tui/src/data/: engine_provider.rs  mock.rs  mod.rs  provider.rs
tui/src/headless/: commands.rs  mod.rs  scan.rs  tests.rs
tui/src/orchestrator/: commands.rs  menu.rs  mod.rs
tui/src/pty/: buffer.rs  grid.rs  manager.rs  mod.rs  session.rs
tui/src/types/: file_tree.rs
tui/src/views/: agent_grid.rs  chat.rs  code_viewer.rs  dashboard.rs  diff.rs  file_browser.rs  fix.rs  mod.rs  obligations.rs  onboarding.rs  passport.rs  report.rs  scan.rs  score.rs  sidebar.rs  terminal.rs  timeline.rs
tui/src/views/dashboard/: content.rs  footer.rs  mod.rs  overlays.rs  panels.rs  tests.rs  tests_e2e_panels.rs  tests_e2e_views.rs  tests_helpers.rs  tests_input.rs  tests_rendering.rs  tests_state.rs  tests_widgets.rs
tui/src/views/dashboard/snapshots/: complior__views__dashboard__tests__snapshot_dashboard_default.snap  complior__views__dashboard__tests_rendering__snapshot_dashboard_default.snap
tui/src/views/fix/: apply.rs  diff_preview.rs  mod.rs  render.rs  tests.rs
tui/src/views/fix/snapshots/: complior__views__fix__tests__snapshot_fix_single_mode.snap
tui/src/views/onboarding/: mod.rs  steps.rs  tests.rs
tui/src/views/passport/: fields.rs  mod.rs  tests.rs
tui/src/views/report/: generators.rs  mod.rs  tests.rs
tui/src/views/scan/: detail.rs  mod.rs  preview.rs  render.rs  shared.rs  tests.rs
tui/src/views/scan/snapshots/: complior__views__scan__tests__tests__snapshot_scan_split_layout.snap
tui/src/views/snapshots/: complior__views__chat__tests__snapshot_chat_with_messages.snap  complior__views__dashboard__tests__snapshot_dashboard_default.snap  complior__views__fix__tests__snapshot_fix_single_mode_type_a_recommendation.snap  complior__views__fix__tests__snapshot_fix_single_mode_type_b.snap  complior__views__fix__tests__snapshot_fix_staged_unstaged.snap  complior__views__fix__tests__snapshot_fix_with_findings.snap  complior__views__scan__tests__snapshot_scan_no_results.snap  complior__views__scan__tests__snapshot_scan_split_layout.snap  complior__views__sidebar__tests__snapshot_sidebar_default.snap
tui/src/widgets/: context_meter.rs  mod.rs
(+2025 files in other folders)
