[package]
name = "complior-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AI Act Compliance Scanner & Fixer — CLI"
homepage = "https://complior.ai"
keywords = ["compliance", "ai", "eu-ai-act", "scanner", "terminal"]
categories = ["development-tools", "command-line-utilities"]
readme = "../README.md"

[[bin]]
name = "complior"
path = "src/main.rs"

[features]
default = []
tui = ["ratatui", "dep:syntect", "dep:notify", "dep:unicode-width"]
extras = []

[dependencies]
# Core (always — used by headless commands)
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
termimad = "0.30"
toml = "0.8"
dirs = "5"
color-eyre = "0.6"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
base64 = "0.22.1"
crossterm = { version = "0.28", features = ["event-stream"] }
futures-util = "0.3"

# TUI-only (optional)
ratatui = { version = "0.30", optional = true }
syntect = { version = "5", optional = true }
notify = { version = "6", optional = true }
unicode-width = { version = "0.2", optional = true }

[dev-dependencies]
insta = { version = "1", features = ["filters"] }
mockito = "1"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
future_not_send = "allow"
