[package]
name = "complior-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AI Act Compliance Scanner & Fixer — CLI"
homepage = "https://complior.ai"
keywords = ["compliance", "ai", "eu-ai-act", "scanner", "terminal"]
categories = ["development-tools", "command-line-utilities"]
readme = "../README.md"

[[bin]]
name = "complior"
path = "src/main.rs"

[features]
default = []
tui = ["ratatui", "dep:syntect", "dep:notify", "dep:unicode-width"]
extras = []

[dependencies]
# Core (always — used by headless commands)
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
termimad = "0.30"
toml = "0.8"
dirs = "5"
color-eyre = "0.6"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
base64 = "0.22.1"
crossterm = { version = "0.28", features = ["event-stream"] }
futures-util = "0.3"

# TUI-only (optional)
ratatui = { version = "0.30", optional = true }
syntect = { version = "5", optional = true }
notify = { version = "6", optional = true }
unicode-width = { version = "0.2", optional = true }

[dev-dependencies]
insta = { version = "1", features = ["filters"] }
mockito = "1"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Existing allows
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
future_not_send = "allow"
# Pre-existing across codebase — tracked for incremental cleanup
format_push_string = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
too_many_lines = "allow"
too_many_arguments = "allow"
manual_let_else = "allow"
doc_markdown = "allow"
option_if_let_else = "allow"
items_after_statements = "allow"
collapsible_if = "allow"
format_in_format_args = "allow"
match_same_arms = "allow"
needless_raw_string_hashes = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
trivially_copy_pass_by_ref = "allow"
missing_const_for_fn = "allow"
useless_let_if_seq = "allow"
uninlined_format_args = "allow"
semicolon_if_nothing_returned = "allow"
if_same_then_else = "allow"
needless_continue = "allow"
needless_pass_by_ref_mut = "allow"
single_char_pattern = "allow"
module_inception = "allow"
no_effect_underscore_binding = "allow"
collection_is_never_read = "allow"
case_sensitive_file_extension_comparisons = "allow"
ref_option = "allow"

[lints.rust]
# TUI code compiled but unused when tui feature is off
dead_code = "allow"
