[package]
name = "complior-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Compliance-First AI Coding Assistant — TUI"

[[bin]]
name = "complior"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
termimad = "0.30"
syntect = "5"
toml = "0.8"
dirs = "5"
color-eyre = "0.6"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
unicode-width = "0.2"
notify = "6"

[dev-dependencies]
insta = "1"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
future_not_send = "allow"
